<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_f5f5f5"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_8">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_head"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_65"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volunteer_head_portrait"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.daqsoft.baselib.widgets.ArcImageView
                    android:id="@+id/av_user_head"
                    placeholder="@drawable/mine_profile_photo_default"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:scaleType="centerCrop"
                    app:is_circle="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/img_arrow"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:src="@mipmap/choose"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/divider_e8"
                android:paddingLeft="@dimen/dp_20" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:rightContentMaxLength="10"
                app:leftLabel="@string/volunteer_module_register_label_name"
                app:rightContentColor="@color/color_666"
                app:showArrow="false" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:leftLabel="@string/volunteer_module_register_label_sex"
                app:rightContentColor="@color/color_666"
                app:showArrow="false" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_national"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:leftLabel="@string/volunteer_module_register_label_national"
                app:rightContentColor="@color/color_666"
                app:rightContentMaxLength="10"
                app:showArrow="false" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_reg_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:leftLabel="@string/volunteer_register_date"
                app:rightContentColor="@color/color_666"
                app:showArrow="false" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_volunteer_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:leftLabel="@string/volunteer_id"
                app:rightContentColor="@color/color_666"
                app:showArrow="false" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_id_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:leftLabel="@string/volunteer_id_card"
                app:rightContentColor="@color/color_666"
                app:showArrow="false" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_id_card_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:leftLabel="@string/volunteer_id_card_photo"
                app:rightContentColor="@color/color_666"
                app:showArrow="false" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_16"
                app:leftLabel="@string/volunteer_module_register_contact"
                app:showArrow="true"
                app:showDivider="false" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_service_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:paddingLeft="@dimen/dp_20"
                app:rightContentMaxLength="10"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:leftLabel="@string/volunteer_module_register_label_service_region"
                app:showArrow="true" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_volunteer_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:leftLabel="@string/volunteer_module_register_label_volunteer_region"
                app:rightContentMaxLength="10"
                app:showArrow="true" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:leftLabel="@string/volunteer_level"
                app:rightContentColor="@color/color_666"
                app:showArrow="false" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:rightContentMaxLength="10"
                app:leftLabel="@string/volunteer_module_register_label_education"
                app:rightContentColor="@color/color_333"
                app:showArrow="true" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:rightContentMaxLength="10"
                app:leftLabel="@string/volunteer_module_register_label_school"
                app:rightContentColor="@color/color_333"
                app:showArrow="true" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_16"
                app:leftLabel="@string/volunteer_module_register_label_job_status"
                app:rightContentColor="@color/color_333"
                app:showArrow="true"
                app:rightContentMaxLength="10"
                app:showDivider="false" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_special"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:leftLabel="@string/volunteer_module_register_skill"
                app:rightContentMaxLength="10"
                app:rightContentColor="@color/color_333"
                app:showArrow="true" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_health"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:leftLabel="@string/volunteer_module_register_health"
                app:rightContentMaxLength="10"
                app:rightContentColor="@color/color_333"
                app:showArrow="true" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:leftLabel="@string/volunteer_module_register_language"
                app:rightContentMaxLength="10"
                app:rightContentColor="@color/color_333"
                app:showArrow="true" />

            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_service_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:leftLabel="@string/volunteer_module_register_service_time"
                app:rightContentMaxLength="10"
                app:rightContentColor="@color/color_333"
                app:showArrow="true" />
            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_service_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:rightContentColor="@color/color_333"
                app:rightContentMaxLength="10"
                android:paddingBottom="@dimen/dp_16"
                app:leftLabel="@string/volunteer_module_register_service_type"
                app:showDivider="false"
                app:showArrow="true" />
            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:rightContentColor="@color/color_333"
                android:layout_marginTop="@dimen/dp_8"
                app:rightContentMaxLength="16"
                app:leftLabel="@string/volunteer_module_register_email"
                app:showArrow="true" />
            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_qq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                app:rightContentColor="@color/color_333"
                app:maxElms="10"
                app:leftLabel="@string/volunteer_module_register_qq"
                app:showArrow="true" />
            <com.daqsoft.provider.view.ItemView
                android:id="@+id/iv_address_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_16"
                android:paddingRight="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_50"
                app:rightContentColor="@color/color_333"
                app:rightContentMaxLength="16"
                app:leftLabel="@string/volunteer_module_register_address"
                app:showDivider="false"
                app:showArrow="true" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>