<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="item"
            type="com.daqsoft.volunteer.bean.VolunteerBean" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/dp_10"
        app:cardElevation="@dimen/dp_4"
        app:cardMaxElevation="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        app:cardShadowColorStart="@color/f5"
        app:cardShadowColorEnd="@color/white"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            >

            <com.daqsoft.widget.RoundImageView
                android:id="@+id/iv_header"
                android:layout_width="@dimen/dp_44"
                android:layout_height="@dimen/dp_44"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:type="circle" />
            <ImageView
                android:id="@+id/iv_flag"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_15"
                android:src="@mipmap/volunteer_single_details_icon_tag"
                app:layout_constraintRight_toRightOf="@id/iv_header"
                app:layout_constraintTop_toTopOf="@id/iv_header"
                />
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:textColor="@color/color_333"
                android:textSize="@dimen/sp_16"
                app:layout_constraintLeft_toRightOf="@+id/iv_header"
                app:layout_constraintTop_toTopOf="@+id/iv_header"
                tools:text="方三三" />


            <TextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:paddingTop="@dimen/dp_2"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_11"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_name"
                tools:text="一星级" />


            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/color_999"
                android:textSize="@dimen/sp_13"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintLeft_toLeftOf="@id/tv_name"
                tools:text="火锅、串串的前世今生" />


            <TextView
                android:id="@+id/tv_team"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/color_999"
                android:textSize="@dimen/sp_13"
                app:layout_constraintLeft_toLeftOf="@id/tv_address"
                app:layout_constraintTop_toBottomOf="@+id/tv_address"
                tools:text="这三者并驾齐驱出现的时候，" />
            <View
                android:id="@+id/v_line"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_team"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:background="@color/line"
                />
            <LinearLayout
                app:layout_constraintTop_toBottomOf="@id/v_line"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="@dimen/dp_0"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/tv_service_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="11"
                            android:textSize="@dimen/sp_13"
                            android:textColor="@color/color_333"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="服务次数"
                            android:text="@string/volunteer_module_label_service_count"
                            android:layout_marginTop="@dimen/dp_6"
                            android:textSize="@dimen/sp_12"
                            android:textColor="@color/color_999"
                            />
                    </LinearLayout>
                    <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tv_service_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="11"
                        android:textSize="@dimen/sp_13"
                        android:textColor="@color/color_333"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="服务时长"
                        android:text="@string/volunteer_module_label_team_service_time"
                        android:layout_marginTop="@dimen/dp_6"
                        android:textSize="@dimen/sp_12"
                        android:textColor="@color/color_999"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tv_service_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="11"
                        android:textSize="@dimen/sp_13"
                        android:textColor="@color/color_333"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="公益积分"
                        android:text="@string/volunteer_module_label_score"
                        android:layout_marginTop="@dimen/dp_6"
                        android:textSize="@dimen/sp_12"
                        android:textColor="@color/color_999"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>